# webagent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  result.md
bad_evals/: fly-unified-13.md  timezone.md
docs/: actions.md  obs.md  submission_errs.md
docs/bad_evals/: gomail-3.md
results/2025-05-29_04-56-37_DemoAgent_on_webclones.dashdish-1_920_1b51dd8236a14df487c913a7a3cf8df0/: exp_args.pkl  summary_info.json
results/2025-05-29_04-57-09_DemoAgent_on_webclones.dashdish-10_631_7f6f2f7fe57a4c58bad4b15795331671/: summary_info.json
results/2025-05-29_05-02-05_DemoAgent_on_webclones.dashdish-2_703_8ba53a5a57d14c04b53ce46482291594/: summary_info.json
results/2025-05-29_05-09-01_DemoAgent_on_webclones.dashdish-4_116_93c52a14a92942c2bb7ac5ff6cead536/: exp_args.pkl  summary_info.json
results/2025-05-29_05-11-31_DemoAgent_on_webclones.dashdish-5_262_7955822cd56849b98c1e235ce0dbcc92/: exp_args.pkl  summary_info.json
results/2025-05-29_05-13-37_DemoAgent_on_webclones.dashdish-6_641_84f2c3846fc24a459cb37815307087de/: exp_args.pkl
results/2025-05-29_05-14-19_DemoAgent_on_webclones.dashdish-7_762_e4773627d2c54b4687fa672d4521f518/: exp_args.pkl
results/2025-05-29_05-18-54_DemoAgent_on_webclones.fly-unified-1_949_df2b8590d68342c7a38d7cfb9bfae861/: exp_args.pkl  summary_info.json
results/2025-05-29_05-24-05_DemoAgent_on_webclones.fly-unified-10_114_b6fedd655f414e9885877a7fb013bb54/: exp_args.pkl  summary_info.json
results/2025-05-29_05-54-34_DemoAgent_on_webclones.fly-unified-11_389_5aae25e47fa44f7096e21ed6078bf2d6/: summary_info.json
(+216 files in other folders)
