[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webagent"
version = "0.1.21"
authors = [
    {name = "Greg Tarr", email = "gregoryguytarr@gmail.com"}
]
description = "AI Web Agent"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "git+https://github.com/agi-inc/agisdk.git@0.1.21",
    "anthropic>=0.52.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
